# NDKTest2

./: gradlew
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/ru/artem/ndktest2/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  catalog.cpp  catalog.h  native-lib-2.cpp  native-lib.cpp
app/src/main/java/ru/artem/ndktest2/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/ru/artem/ndktest2/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
