# Для получения дополнительной информации об использовании CMake с Android Studio прочитайте
# документацию: https://d.android.com/studio/projects/add-native-code.html

# Устанавливает минимальную версию CMake, необходимую для построения собственной библиотеки.

cmake_minimum_required(VERSION 3.4.1)

# Создает и называет библиотеку, устанавливает ее как STATIC
# bли SHARED, и предоставляет относительные пути к исходному коду.
# Вы можете определить несколько библиотек, и CMake создаст их для вас.
# Gradle автоматически упаковывает разделяемые библиотеки с вашим APK.

add_library( # Устанавливает имя библиотеки.
             native-lib

             # Устанавливает библиотеку как общедоступную
             SHARED

             # Предоставляет относительный путь к исходному файлу (файлам).
             native-lib.cpp )

add_library( # Устанавливает имя библиотеки.
             native-lib-2

             # Устанавливает библиотеку как общедоступную
             SHARED

             # Предоставляет относительный путь к исходному файлу (файлам).
             native-lib-2.cpp )

# Ищет указанную заранее подготовленную библиотеку и сохраняет путь как
# variable. Поскольку CMake включает системные библиотеки в путь поиска по
# default, вам нужно только указать имя общедоступной библиотеки NDK
# вы хотите добавить. CMake проверяет, существует ли библиотека ранее
# завершенной сборки.

find_library( # Устанавливает имя переменной пути.
              log-lib

              # Определяет имя библиотеки NDK, которую
              # вы хотите найти CMake.
              log )

# Определяет библиотеки CMake, которые должны ссылаться на вашу целевую библиотеку. Вы
# может связывать несколько библиотек, таких как библиотеки, которые вы определяете в этом
# скрипт сборки, предварительно созданные сторонние библиотеки или системные библиотеки.

target_link_libraries( # Определяет целевую библиотеку.
                       native-lib

                       # Связывает целевую библиотеку с библиотекой журналов
                       # Включено в NDK.
                       ${log-lib} )

target_link_libraries( # Определяет целевую библиотеку.
                       native-lib-2

                       # Связывает целевую библиотеку с библиотекой журналов
                       # Включено в NDK.
                       ${log-lib} )